--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,8 @@
     {# bootstrap meta tags #}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" integrity="sha256-zmfNZmXoNWBMemUOo1XUGFfc0ihGGLYdgtJS3KCr/l0=" crossorigin="anonymous" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" integrity="sha256-piqEf7Ap7CMps8krDQsSOTZgF+MU/0MPyPW2enj5I40=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/v4-shims.min.css" integrity="sha256-aHZRnvSsxGjbzQYQxIPzq+cU+R1DrVwWhl1Y2vJmMk8=" crossorigin="anonymous" />
     <link rel="stylesheet" href="/static/custom.css">
     <title>{% block title %}{% endblock %} - Hacker Jeopardy</title>
     {% block style %}{% endblock %}
